# GcovParserLibrary

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  gcovbuffer.cpp  gcovbuffer.h  gcovfileparser.cpp  gcovfileparser.h  gcovfileparser_global.h
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt  gcovbuffertests.cpp  gcovfileparsertests.cpp  main.cpp  slicereftest.cpp
